# streaming-emotion-llm

./: .gitignore  README.md  pyproject.toml
configs/: README.md
configs/data/: streaming_emotion.yaml
configs/eval/: emotion_streaming.yaml
configs/experiments/: baseline_tinyllama_siglip_lora.yaml  exp1_r8_32videos.yaml  exp2_r32_32videos.yaml  exp2_r32_32videos_facexformer.yaml  exp3_r32_128videos.yaml  exp4_r32_full.yaml  exp4_r32_full_facexformer.yaml  exp4_r32_full_facexformer_earlystop.yaml  exp4_r32_full_facexformer_earlystop_labelw3.yaml  fullvideo_smoke_tinyllama_siglip_lora.yaml  (+10 more)
data/: README.md
docs/: architecture.md  current_emotion_token_pipeline.md  environment.md  experiment_protocol.md  file_inventory_mapping.md  original_module_reuse.md  original_vs_ported_code_review.md  ported_framework.md  progress_log.md  references.md  research_plan.md  session_handoff_2026-05-09.md  session_handoff_2026-05-12.md  source_code_mapping.md
examples/: README.md
scripts/: app_gradio.py  build_feature_manifest_splits.py  build_feature_subset_manifest.py  build_manifest.py  evaluate.py  evaluate_autoregressive.py  evaluate_generation.py  evaluate_original_stream_fullvideo.py  evaluate_teacher_forcing_fullvideo.py  evaluate_video_stream.py  infer_stream.py  inspect_annotations.py  precompute_facexformer_features.py  precompute_video_features.py  preprocess.py  run_exp4_facexformer_pipeline.ps1  split_manifest.py  train.py  validate_face_feature_alignment.py  visualize_facexformer_features.py
tests/: test_config.py  test_face_connector.py  test_stream_dataset.py
(+1587 files in other folders)
